:sparkles: feat: WebClient Service, Generate Card